# code-review

./: .env.example  .gitignore  API.md  README.md  SETUP.md  SKILL.md  TROUBLESHOOTING.md  docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.yml  github.md  main.py  pyproject.toml  research.md
api-gateway/: Dockerfile  pyproject.toml
api-gateway/src/gateway/: main.py
api-gateway/src/gateway/routes/: config.py  defectdojo.py  health.py  prompts.py  reviews.py  webhook.py
api-gateway/src/gateway/services/: defectdojo.py  git_platform.py  llm.py  ollama.py  review_pipeline.py  tabby.py
api-gateway/src/gateway/utils/: auth.py  sanitize.py
api-gateway/tests/: test_auth.py  test_config_routes.py  test_defectdojo_routes.py  test_defectdojo_service.py  test_defectdojo_summary.py  test_git_platform.py  test_health.py  test_health_extra.py  test_llm.py  test_main_exception_handler.py  test_prompts_routes.py  test_review_pipeline.py  test_reviews.py  test_reviews_extra.py  test_sanitize.py  test_tabby.py  test_webhook.py
ci-templates/: gitea-actions.yml  gitlab-ci.yml
config/gitleaks/: .gitleaks.toml
config/nginx/: nginx.conf
config/pr-agent/: configuration.toml
config/prometheus/: prometheus.yml
config/prompts/: review.md  security-audit.md  summarize.md  triage.md
dashboard/: Dockerfile  index.html  package.json  vite.config.js
dashboard/src/: App.jsx  main.jsx
dashboard/src/api/: defectdojo.js  gitplatform.js  llm.js  ollama.js
scripts/: backup.sh  healthcheck.py  setup.sh  triage-findings.py  upload-to-defectdojo.py
(+9 files in other folders)
