[project]
name = "api-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "toml>=0.10",
    "python-dotenv>=1.1",
    "slowapi>=0.1",
    "loguru>=0.7",
    "tenacity>=9.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
